# BresserWeatherSensorReceiver

./: .gitignore  BresserWeatherSensorReceiver.ino  LICENSE  a.out  test_decoder
examples/BresserWeatherSensorBasic_v2/: BresserWeatherSensorBasic_v2.ino
examples/TestNTPTime/: TestNTPTime.ino
examples/TestTime/: TestTime.ino
server/: dashboard.py  data_processor.py  mosquitto.conf  pyproject.toml  requirements.txt  send_data_snowflake.py  server_implementation.py
server/data/: processed_weather.duckdb  raw_weather.duckdb
server/database/: init_db.py  schema.py
server/tests/: test_integration.py
src/: Decoder.c  Decoder.h  WeatherSensor.h  WeatherSensorCfg.h  time_test  time_test.c
src_obsolete/: InitBoard.c  InitBoard.h  WeatherSense.cppx  WeatherSensor.c
test/test_decoder/: test_decoder.c
